--- a/src/shared/timeline/Timeline.module.scss
+++ b/src/shared/timeline/Timeline.module.scss
@@ -8,33 +8,33 @@
     position: relative;
     margin: 0 auto;
     padding:  var(--timeline-spacing) 0;
+}
 
-    &__item {
-        position: relative;
-        list-style-type: none;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        padding-block: calc(var(--timeline-spacing) / 2);
+.timelineItem {
+    position: relative;
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-block: calc(var(--timeline-spacing) / 2);
 
-        &:first-child {
-            padding-block-start: 0;
-        }
+    &:first-child {
+        padding-block-start: 0;
+    }
 
-        &:last-child {
-            padding-block-end: 0;
-        }
+    &:last-child {
+        padding-block-end: 0;
+    }
 
-        &::before {
-            content: "";
-            position: absolute;
-            width: var(--timeline-stroke-width);
-            top: 0;
-            bottom: 0;
-            left: calc(var(--timeline-dot-size) / 2);
-            margin-left: calc(var(--timeline-stroke-width) / 2 * -1);
-            background-color: var(--timeline-stroke-color);
-        }
+    &::before {
+        content: "";
+        position: absolute;
+        width: var(--timeline-stroke-width);
+        top: 0;
+        bottom: 0;
+        left: calc(var(--timeline-dot-size) / 2);
+        margin-left: calc(var(--timeline-stroke-width) / 2 * -1);
+        background-color: var(--timeline-stroke-color);
     }
 
     &__point {
@@ -77,4 +77,5 @@
             color: #4F4F4F;
         }
     }    
+
 }
