--- a/src/shared/timeline/Timeline.module.scss
+++ b/src/shared/timeline/Timeline.module.scss
@@ -6,8 +6,9 @@
     --timeline-dot-size: 14px;
 
     position: relative;
+    width: 100%;
     margin: 0;
-    padding:  0;
+    padding:  var(--timeline-spacing) 0;
 }
 
 .timelineItem {
