--- a/src/shared/timeline/Timeline.module.scss
+++ b/src/shared/timeline/Timeline.module.scss
@@ -8,7 +8,7 @@
     position: relative;
     width: 100%;
     margin: 0;
-    padding:  var(--timeline-spacing) 0;
+    padding: 0;
 }
 
 .timelineItem {
