--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,10 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 
+p {
+  margin: 0 0 1.5rem 0;
+}
+
 a {
   color: inherit;
   text-decoration: none;
