--- a/src/shared/main/Main.module.scss
+++ b/src/shared/main/Main.module.scss
@@ -1,6 +1,6 @@
 .main {
     position: relative;
-    padding-top: clamp(1rem, 20%, 18rem);
+    padding-block-start: 20vw;
 
     &__background {
         position: absolute;
