--- a/src/shared/typography/Typography.module.scss
+++ b/src/shared/typography/Typography.module.scss
@@ -1,22 +1,18 @@
 .h1 {
-    font-size: 1.5rem;
-    font-size: clamp(1.5rem, 1rem + 2.2222vw, 3rem);
-    font-weight: 400;
-    padding: 0;
-    margin: 0;    
+    font-size: var(--font-sizes-large, 1.375rem);
 }
 
 .h2 {
-    font-size: 1rem;
-    font-size: clamp(1rem, 0.8750rem + 0.5556vw, 1.375rem);
-    font-weight: 400;
-    padding: 0;
-    margin: 0;    
+    font-size: var(--font-sizes-medium, 1rem);
 }
 
 .p{
-    font-size: 1rem;
-    font-size: clamp(1rem, 0.8750rem + 0.5556vw, 1.375rem);
-    font-weight: 200;
-    line-height: 1.5;
+    font-size: var(--font-sizes-medium, 1rem);
+    font-weight: var(--font-weights-normal, 300);
+    line-height: var(--line-heights-medium, 1.5);
+    margin: 0 0 var(--space-medium) 0;
+
+    &:last-of-type {
+        margin-block-end: 0;
+    }
 }
