--- a/src/shared/list/List.module.scss
+++ b/src/shared/list/List.module.scss
@@ -1,8 +1,8 @@
 .list {
-    --list-spacing: 1.5rem;
+    --list-spacing: var(--space-medium, 1.5rem);
     --list-bullet-size: 14px;
     --list-bullet-stroke-width: 2px;
-    --list-bullet-stroke-color: #bdbdbd;
+    --list-bullet-stroke-color: var(--colors-gray-lighter, #bdbdbd);
 
     position: relative;
     width: 100%;
