--- a/src/ui/header/Header.module.scss
+++ b/src/ui/header/Header.module.scss
@@ -18,6 +18,7 @@
         padding: 0;
         margin: 0;
         font-size: 1.25rem;
+        font-weight: 400;
         text-decoration: none;
         white-space: nowrap;
         text-transform: uppercase;
