Header visual fixes for high resolutions

--- a/src/ui/globals.scss
+++ b/src/ui/globals.scss
@@ -27,6 +27,12 @@
   // margin, padding, grid
   --space-medium: 1.5rem;
   --space-large: 3rem;
+  // shadows
+  --shadows-tiny: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  --shadows-small: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  --shadows-medium: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+  --shadows-large: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  --shadows-big: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
 }
 
 *,
