--- a/src/ui/globals.scss
+++ b/src/ui/globals.scss
@@ -41,10 +41,12 @@
   box-sizing: border-box;
 }
 
-html,
 body {
-  width: 100%;
-  height: 100%;
+  font-family: var(--fonts-body);
+  font-size: var(--font-sizes-medium);
+  font-weight: var(--font-weights-normal);
+  line-height: var(--line-heights-medium);
+  color: var(--colors-gray-darker);
 }
 
 a {
